# RA.Aid-swe-bench

./: .gitignore  .opencommitignore  BUGS.md  Makefile  README.md  TODO.md  add_model_name.py  checklist.md  error_message.txt  fix_prediction_files.py  main.py  pyproject.toml  ra-aid-model.ra_aid_eval.json
predictions/OLD/ra_aid_selected_predictions.250107-131254/: all_preds.jsonl
predictions/OLD/ra_aid_selected_predictions.250107-133214/: all_preds.jsonl
predictions/OLD/ra_aid_selected_predictions.250110-094513/: all_preds.jsonl
predictions/OLD/ra_aid_selected_predictions.250110-094713/: all_preds.jsonl
predictions/OLD/ra_aid_selected_predictions.250110-095326/: all_preds.jsonl
predictions/OLD/ra_aid_selected_predictions.250110-100138/: all_preds.jsonl
predictions/OLD/ra_aid_selected_predictions.250110-100244/: all_preds.jsonl
predictions/OLD/ra_aid_selected_predictions.250110-100355/: all_preds.jsonl
predictions/ra_aid_predictions/: all_preds.jsonl  astropy__astropy-12907.json  astropy__astropy-14182.json  astropy__astropy-14365.json  astropy__astropy-14995.json  astropy__astropy-6938.json  astropy__astropy-7746.json  django__django-10914.json  django__django-10924.json  django__django-11001-attempt1-20250107-093208.json  django__django-11001-attempt1-20250109-140050.json  django__django-11001.json  django__django-11019.json  django__django-11039.json  django__django-11049.json  django__django-11099.json  django__django-11133.json  django__django-11179.json  django__django-11283.json  django__django-11422.json  django__django-11564.json  django__django-11583.json  django__django-11620.json  django__django-11630.json  django__django-11742.json  django__django-11797.json  django__django-11815.json  django__django-11848.json  django__django-11905.json  django__django-11964-attempt1-20250107-091207.json  django__django-11964-attempt1-20250107-094131.json  django__django-11964.json  django__django-11999.json  django__django-12113.json  django__django-12125.json  django__django-12184.json  django__django-12284.json  django__django-12308.json  django__django-12589-attempt1-20250110-092242.json  django__django-12700-attempt1-20250107-090939.json  (+52 more)
predictions/ra_aid_selected_predictions/: all_preds.jsonl
swe_lite_ra_aid/: agent_runner.py  compare.py  config.py  dataset_analyzer.py  dataset_constants.py  dump.py  git.py  harness.py  install_deps.py  io_utils.py  logger.py  main.py  prompts.py  repo_manager.py  report.py  run_setup.py  table.py  tests.py  utils.py  uv_utils.py  venv_setup.py  version_validator.py
