[tool.poetry]
name = "swe-lite-ra-aid"
version = "0.1.0"
description = "SWE Bench Lite for ra-aid agent"
authors = ["Ariel Frischer <arielfrischer@gmail.com>"]
readme = "README.md"
packages = [{include = "swe_lite_ra_aid"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ra-aid = { path = "/home/user/workspace/ra-aid", develop = true }
datasets = { git = "https://github.com/huggingface/datasets.git", branch = "main", rev= "3a4e74a9ace62ecd5c9cde7dcb6bcabd65cc7857" }
gitpython = "<=3.1.44"
lox = "^0.12.0"
swebench = "^2.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.12.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

