[project]
name = "swe-lite-ra-aid"
version = "0.1.1"
description = "SWE Bench Lite for ra-aid agent"
authors = [
    {name = "Ariel Frischer", email = "arielfrischer@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    # "ra-aid @ git+https://github.com/ariel-frischer/RA.Aid.git@dev",
    "ra-aid @ git+https://github.com/ariel-frischer/RA.Aid.git@fallback-tools",
    # "ra-aid @ git+https://github.com/ai-christianson/RA.Aid.git@master",
    # "datasets @ git+https://github.com/huggingface/datasets.git@7a1a84b5ea3a1fbe67884b339a7a081ce450f824",
    "datasets @ git+https://github.com/huggingface/datasets.git",
    "gitpython <=3.1.44",
    "lox >=0.12.0,<0.13.0",
    "swebench >=2.1.7,<3.0.0",
]

[project.optional-dependencies]
dev = [
    # "pytest @ ^7.0",
    # "black @ ^23.12.1",
    "pytest>=7.0.0",                                                                            
     "black>=23.12.1",    
]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

